Generalize travel pickup interfaces
